...
        />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:id="@+id/nested_scroll_view"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
...

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/make_editText"
                    android:inputType="textCapSentences"
                    />

            </LinearLayout>


...

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/model_editText"
                    android:inputType="textCapSentences"
                    />

            </LinearLayout>


...

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/serialNumber_editText"
                    android:inputType="textCapSentences"
                    />

            </LinearLayout>


            <!--APERTURE INCREMENTS-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:id="@+id/increment_layout"
                android:background="?android:attr/selectableItemBackground"
                >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
...
            <!--APERTURE RANGE-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:id="@+id/aperture_range_layout"
                android:background="?android:attr/selectableItemBackground"
                >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
...
                    android:layout_height="wrap_content"
                    android:paddingBottom="7dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="15sp"
                    android:id="@+id/aperture_range_text"
                    android:text="@string/ClickToSet"
                    />

            </LinearLayout>


            <!--FOCAL LENGTH RANGE-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:id="@+id/focal_length_range_layout"
                android:background="?android:attr/selectableItemBackground"
                >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
...
                    android:layout_height="wrap_content"
                    android:paddingBottom="7dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="15sp"
                    android:id="@+id/focal_length_range_text"
                    android:text="@string/ClickToSet"
                    />

            </LinearLayout>


...
