...
  -->

<resources>
    <string name="About">About</string>
    <string name="Active">Active</string>
    <string name="ActiveRolls">Active rolls</string>
    <string name="Add">Add</string>
    <string name="AddedBy">Added by</string>
    <string name="AddLabels">Add labels</string>
    <string name="AddNewCamera">Add new camera</string>
    <string name="AddNewFilmStock">Add new film stock</string>
    <string name="AddNewFilter">Add new filter</string>
    <string name="AddNewFrame">Add new frame</string>
...
    </plurals>
    <string name="Blue">Blue</string>
    <string name="Both">Both</string>
    <string name="Camera">Camera</string>
    <string name="CameraNoColon">Camera</string>
    <string name="CameraIsInUseConfirmation">Camera is in use. Delete anyway?</string>
    <string name="Cameras">CAMERAS</string>
    <string name="CamerasNoCap">Cameras</string>
    <string name="Cancel">Cancel</string>
    <string name="ChooseApertureRange">Choose aperture range</string>
    <string name="ChooseApertureValue">Choose aperture value</string>
    <string name="ChooseExposureComp">Choose exposure comp</string>
    <string name="ChooseFocalLength">Choose focal length</string>
...
    <string name="From">From</string>
    <string name="FullStop">1 stop</string>
    <string name="GPSNotEnabled">You have location updates enabled in the app\'s settings, but GPS is disabled in system settings.\n\nDo you want to go to system settings to enable GPS?</string>
    <string name="GPSSettings">GPS Settings</string>
    <string name="GPSUpdateSummary">Keep updating the current location using GPS.</string>
    <string name="GPSUpdateTitle">Location updates</string>
    <string name="Gear">Gear</string>
    <string name="General">General</string>
    <string name="GoToSettings">Go to settings</string>
    <string name="Green">Green</string>
    <string name="Grey">Grey</string>
    <string name="HalfStop">½ stop</string>
    <string name="Help">Help</string>
...
    <string name="IsBeingUsed">is being used!</string>
    <string name="Labels">Labels</string>
    <string name="LabelsAdded">Label(s) added</string>
    <string name="LabelsRemoved">Label(s) removed</string>
    <string name="Lens">Lens</string>
    <string name="LensNoColon">Lens</string>
    <string name="Lenses">LENSES</string>
    <string name="LensIsInUseConfirmation">Lens is in use. Delete anyway?</string>
    <string name="LensesNoCap">Lenses</string>
    <string name="License">License</string>
    <string name="Light">Light</string>
    <string name="LightSource">Light source</string>
    <string name="Loaded">Loaded</string>
...
    <string name="NotificationComplementaryPicturesImportSuccessMessage">Pictures imported successfully</string>
    <string name="NotificationComplementaryPicturesImportSuccessTitle">Complementary pictures imported</string>
    <string name="NotificationComplementaryPicturesImportTitle">Importing complementary pictures</string>
    <string name="NoValue">&lt;empty&gt;</string>
    <string name="NoWritePermission">The app needs write permission to external storage to export the .csv file and ExifTool commands.</string>
    <string name="Normal">Normal</string>
    <string name="OK">OK</string>
    <string name="Options">Options</string>
    <string name="Orange">Orange</string>
    <plurals name="PhotosAmount">
        <item quantity="one">%d photo</item>
        <item quantity="other">%d photos</item>
    </plurals>
...
