...
                />
        </LinearLayout>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/number_picker_one"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:clickable="true"
            android:id="@+id/picker_one_fast_forward"
            android:padding="5dp"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                />
        </LinearLayout>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/number_picker_two"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:clickable="true"
            android:padding="5dp"
            android:id="@+id/picker_two_fast_forward"
            android:background="?android:attr/selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Plus50"/>
...
