...
            <!--SHUTTER SPEED RANGE-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:id="@+id/shutter_range_layout"
                android:background="?android:attr/selectableItemBackground"
                tools:ignore="KeyboardInaccessibleWidget">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
...
                    android:layout_height="wrap_content"
                    android:paddingBottom="7dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:textSize="15sp"
                    android:id="@+id/shutter_range_text"
                    android:text="@string/ClickToSet"
                    />

            </LinearLayout>


            <!--EXPOSURE COMPENSATION INCREMENTS-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/exposure_comp_increment_layout"
                tools:ignore="KeyboardInaccessibleWidget">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/iconTintColorSecondary" />
...
